# chroma

./: .gitignore  Cargo.toml  std.cm  test.cm
_scratchpad/: backing_types.txt  build.cm  imports.cm  type_lang.txt  types.cm
src/: lib.rs  main.rs
src/lang/: entity_ids.rs  ident_matcher.rs  mod.rs
src/lang/analysis/: block_links.rs  mod.rs  variable_data_sources.rs
src/lang/ast/: helpers.rs  linking.rs  mod.rs
src/lang/ast/items/: attributes.rs  body.rs  declarations.rs  expression.rs  expressions.rs  mod.rs  statements.rs  types.rs
src/lang/ast/linked_items/: functions.rs  mod.rs
src/lang/ast/linking/: ident_finder.rs
src/lang/entity_ids/: groupitemset.rs  id.rs  id2.rs  itemset.rs  mod.rs
src/lang/modules/: mod.rs
src/lang/solver/: expressions.rs  lowering.rs  mod.rs  modules.rs  namespaces.rs  parser.rs  scope_context.rs  type_assignability.rs  type_system.rs  types.rs
src/lang/solver/entity_ids/: groupitemset.rs  groupitemsetwithrefs.rs  id2_or_val.rs  itemlist.rs  itemset.rs  mod.rs
src/lang/solver/file_graph/: file_cycle_groups.rs  known_files.rs  mod.rs
src/lang/solver/linked_ast/: mod.rs  types.rs
src/lang/solver/lowering/: link_type_expressions.rs  (+1 more)
src/lang/solver_old/: lowering.rs  mod.rs  modules.rs  namespaces.rs  scope_context.rs  types.rs
src/lang/tokens/: lexer.rs  reader.rs  span.rs  tokens.rs
src/playground/: mod.rs  union_shrink.rs
src/syntax/: mod.rs
src/syntax/ast/: body.rs  expression.rs  helpers.rs  mod.rs  types.rs
src/syntax/tokens/: lexer.rs  mod.rs  parser.rs  reader.rs  span.rs  tokens.rs
(+65 files in other folders)
