[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcar = "0.2.4"
frunk = "0.4.2"
futures = "0.3.30"
futures-intrusive = "0.5.0"
logos = "0.13.0"
tokio = { version = "1.35.1", features = ["full"] }
